--- a/dapp/index.html
+++ b/dapp/index.html
@@ -34,11 +34,11 @@
         <div class="jumbotron jumbotron-fluid">
           <div class="container">
               <h1>Coinflip Game</h1>
-              <p> Welcome to coinflip contract </p>
-              <h2>Balance: <span id="balance"></span></h2>
+              <p> Welcome to coinflip contract. In this game you play against the contract. </p>
+              <h2>Contract's balance (in wei): <span id="balance"></span></h2>
               <input id="bet" type="number"/>
               <button id="submit"> Submit </button>
-              <h3 > You: <span id="result"></span> </h3>
+              <h3 > Out come... you: <span id="result"></span> </h3>
           </div>
         </div>
      </body>
